# packages/generated-api/kotlin/src/main/kotlin/com/love_reply/generated/model/ReferralCampaignVersion.kt
@@ -1,0 +1,108 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "DuplicatedCode",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "RemoveRedundantCallsOfConversionMethods",
+    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
+    "RedundantUnitReturnType",
+    "RemoveEmptyClassBody",
+    "UnnecessaryVariable",
+    "UnusedImport",
+    "UnnecessaryVariable",
+    "unused"
+)
+
+package com.love_reply.generated.model
+
+import com.love_reply.generated.model.ReferralAntiAbusePolicy
+import com.love_reply.generated.model.ReferralRewardRule
+import com.love_reply.generated.model.SalesChannel
+
+import com.squareup.moshi.Json
+import com.squareup.moshi.JsonClass
+
+/**
+ *
+ *
+ * @param campaignVersionId
+ * @param campaignId
+ * @param version
+ * @param campaignCode
+ * @param displayName
+ * @param description
+ * @param region
+ * @param salesChannels
+ * @param bindingWindowHours
+ * @param maxQualifiedInvitesPerInviter
+ * @param rewardRules
+ * @param antiAbusePolicy
+ * @param wasPublished
+ * @param action
+ * @param createdByAdminId
+ * @param createdAt
+ */
+
+
+data class ReferralCampaignVersion (
+
+    @Json(name = "campaignVersionId")
+    val campaignVersionId: kotlin.String,
+
+    @Json(name = "campaignId")
+    val campaignId: kotlin.String,
+
+    @Json(name = "version")
+    val version: kotlin.Int,
+
+    @Json(name = "campaignCode")
+    val campaignCode: kotlin.String,
+
+    @Json(name = "displayName")
+    val displayName: kotlin.String,
+
+    @Json(name = "description")
+    val description: kotlin.String,
+
+    @Json(name = "region")
+    val region: kotlin.String,
+
+    @Json(name = "salesChannels")
+    val salesChannels: kotlin.collections.List<SalesChannel>,
+
+    @Json(name = "bindingWindowHours")
+    val bindingWindowHours: kotlin.Int,
+
+    @Json(name = "maxQualifiedInvitesPerInviter")
+    val maxQualifiedInvitesPerInviter: kotlin.Int,
+
+    @Json(name = "rewardRules")
+    val rewardRules: kotlin.collections.List<ReferralRewardRule>,
+
+    @Json(name = "antiAbusePolicy")
+    val antiAbusePolicy: ReferralAntiAbusePolicy,
+
+    @Json(name = "wasPublished")
+    val wasPublished: kotlin.Boolean,
+
+    @Json(name = "action")
+    val action: kotlin.String,
+
+    @Json(name = "createdByAdminId")
+    val createdByAdminId: kotlin.String,
+
+    @Json(name = "createdAt")
+    val createdAt: java.time.OffsetDateTime
+
+) {
+
+
+}
