# packages/generated-api/kotlin/src/main/kotlin/com/love_reply/generated/model/ReferralCampaignVersionListData.kt
@@ -1,0 +1,46 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "DuplicatedCode",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "RemoveRedundantCallsOfConversionMethods",
+    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
+    "RedundantUnitReturnType",
+    "RemoveEmptyClassBody",
+    "UnnecessaryVariable",
+    "UnusedImport",
+    "UnnecessaryVariable",
+    "unused"
+)
+
+package com.love_reply.generated.model
+
+import com.love_reply.generated.model.ReferralCampaignVersion
+
+import com.squareup.moshi.Json
+import com.squareup.moshi.JsonClass
+
+/**
+ *
+ *
+ * @param items
+ */
+
+
+data class ReferralCampaignVersionListData (
+
+    @Json(name = "items")
+    val items: kotlin.collections.List<ReferralCampaignVersion>
+
+) {
+
+
+}
