# packages/generated-api/kotlin/src/main/kotlin/com/love_reply/generated/model/ReferralCampaignVersionListResponse.kt
@@ -1,0 +1,62 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "DuplicatedCode",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "RemoveRedundantCallsOfConversionMethods",
+    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
+    "RedundantUnitReturnType",
+    "RemoveEmptyClassBody",
+    "UnnecessaryVariable",
+    "UnusedImport",
+    "UnnecessaryVariable",
+    "unused"
+)
+
+package com.love_reply.generated.model
+
+import com.love_reply.generated.model.ReferralCampaignVersionListData
+
+import com.squareup.moshi.Json
+import com.squareup.moshi.JsonClass
+
+/**
+ *
+ *
+ * @param code
+ * @param message
+ * @param `data`
+ * @param requestId
+ * @param timestamp
+ */
+
+
+data class ReferralCampaignVersionListResponse (
+
+    @Json(name = "code")
+    val code: kotlin.String,
+
+    @Json(name = "message")
+    val message: kotlin.String,
+
+    @Json(name = "data")
+    val `data`: ReferralCampaignVersionListData,
+
+    @Json(name = "requestId")
+    val requestId: kotlin.String,
+
+    @Json(name = "timestamp")
+    val timestamp: java.time.OffsetDateTime
+
+) {
+
+
+}
