# packages/generated-api/typescript/src/models/ReferralCampaignVersionListData.ts
@@ -1,0 +1,73 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Love Reply Assistant API
+ * Contract-first API for Android, administration, workers, and provider integrations. Public wire fields use lowerCamelCase and all timestamps use RFC 3339 UTC.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { ReferralCampaignVersion } from './ReferralCampaignVersion';
+import {
+    ReferralCampaignVersionFromJSON,
+    ReferralCampaignVersionFromJSONTyped,
+    ReferralCampaignVersionToJSON,
+    ReferralCampaignVersionToJSONTyped,
+} from './ReferralCampaignVersion';
+
+/**
+ *
+ * @export
+ * @interface ReferralCampaignVersionListData
+ */
+export interface ReferralCampaignVersionListData {
+    /**
+     *
+     * @type {Array<ReferralCampaignVersion>}
+     * @memberof ReferralCampaignVersionListData
+     */
+    items: Array<ReferralCampaignVersion>;
+}
+
+/**
+ * Check if a given object implements the ReferralCampaignVersionListData interface.
+ */
+export function instanceOfReferralCampaignVersionListData(value: object): value is ReferralCampaignVersionListData {
+    if (!('items' in value) || value['items'] === undefined) return false;
+    return true;
+}
+
+export function ReferralCampaignVersionListDataFromJSON(json: any): ReferralCampaignVersionListData {
+    return ReferralCampaignVersionListDataFromJSONTyped(json, false);
+}
+
+export function ReferralCampaignVersionListDataFromJSONTyped(json: any, ignoreDiscriminator: boolean): ReferralCampaignVersionListData {
+    if (json == null) {
+        return json;
+    }
+    return {
+
+        'items': ((json['items'] as Array<any>).map(ReferralCampaignVersionFromJSON)),
+    };
+}
+
+export function ReferralCampaignVersionListDataToJSON(json: any): ReferralCampaignVersionListData {
+    return ReferralCampaignVersionListDataToJSONTyped(json, false);
+}
+
+export function ReferralCampaignVersionListDataToJSONTyped(value?: ReferralCampaignVersionListData | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+
+        'items': ((value['items'] as Array<any>).map(ReferralCampaignVersionToJSON)),
+    };
+}
