# packages/generated-api/typescript/src/models/index.ts
@@ -230,6 +230,9 @@ export * from './ReferralCampaignListData';
 export * from './ReferralCampaignListResponse';
 export * from './ReferralCampaignResponse';
 export * from './ReferralCampaignStatus';
+export * from './ReferralCampaignVersion';
+export * from './ReferralCampaignVersionListData';
+export * from './ReferralCampaignVersionListResponse';
 export * from './ReferralCampaignWriteRequest';
 export * from './ReferralInvite';
 export * from './ReferralInviteListData';
